--- a/pharmacyai/package.json
+++ b/pharmacyai/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.21.4",
     "axios": "^1.7.7",
+    "browser-image-compression": "^2.0.2",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
