--- a/pharmacyai/package.json
+++ b/pharmacyai/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.3.0",
+    "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/react-query": "^5.62.0",
     "@tanstack/react-query-devtools": "^5.61.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -21,6 +21,8 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-toolkit": "^1.1.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
