UPDATE LẦN CUỐI

--- a/pharmacyai-backend/.env
+++ b/pharmacyai-backend/.env
@@ -2,3 +2,6 @@ PORT=3001
 MONGO_DB=mongodb+srv://thanhkg5:thanhkg1509@pharmacy.w3gvw.mongodb.net/?retryWrites=true&w=majority&appName=Pharmacy
 ACCESS_TOKEN=access_token
 REFRESH_TOKEN=refresh_token
+CLIENT_ID=AZGcm_5QR5dsQZbI5zCqJWGFdfKX_e0HfHsEXJ0dvn4UVWbBN7zdS0djAwLKztNA6uwiJed4eTjJzQ30
+MAIL_PASSWORD=bddcfofucnlzitma
+MAIL_ACCOUNT=thanhkg5@gmail.com
