--- a/pharmacyai/package.json
+++ b/pharmacyai/package.json
@@ -26,7 +26,8 @@
     "redux-toolkit": "^1.1.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yocto-queue": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
