--- a/pharmacyai-backend/.env
+++ b/pharmacyai-backend/.env
@@ -5,3 +5,13 @@ REFRESH_TOKEN=refresh_token
 CLIENT_ID=AZGcm_5QR5dsQZbI5zCqJWGFdfKX_e0HfHsEXJ0dvn4UVWbBN7zdS0djAwLKztNA6uwiJed4eTjJzQ30
 MAIL_PASSWORD=bddcfofucnlzitma
 MAIL_ACCOUNT=thanhkg5@gmail.com
+
+# MoMo Configuration
+MOMO_PARTNER_CODE=MOMO
+MOMO_ACCESS_KEY=F8BBA842ECF85
+MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
+MOMO_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api/create
+
+# URLs for MoMo redirection
+FRONTEND_URL=https://pharmacypa.vercel.app
+BACKEND_URL=https://pharmacypa.onrender.com
