--- a/pharmacyai/package.json
+++ b/pharmacyai/package.json
@@ -15,6 +15,7 @@
     "browser-image-compression": "^2.0.2",
     "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
