--- a/pharmacyai/package.json
+++ b/pharmacyai/package.json
@@ -29,6 +29,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yocto-queue": "^1.2.0"
   },
   "scripts": {
