--- a/pharmacyai-backend/package.json
+++ b/pharmacyai-backend/package.json
@@ -18,9 +18,13 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.7.3",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "path": "^0.12.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
