--- a/pharmacyai/package.json
+++ b/pharmacyai/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "browser-image-compression": "^2.0.2",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
