--- a/pharmacyai/package.json
+++ b/pharmacyai/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/compatible": "^5.1.4",
     "@ant-design/plots": "^2.3.3",
     "@paypal/react-paypal-js": "^8.8.2",
     "@reduxjs/toolkit": "^2.4.0",
