--- a/pharmacyai/package.json
+++ b/pharmacyai/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@ant-design/compatible": "^5.1.4",
-    "@ant-design/plots": "^2.3.3",
     "@paypal/react-paypal-js": "^8.8.2",
     "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/react-query": "^5.62.0",
@@ -25,6 +24,7 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "recharts": "^2.15.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
