--- a/pharmacyai/package.json
+++ b/pharmacyai/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.23.4",
     "axios": "^1.7.7",
     "browser-image-compression": "^2.0.2",
+    "d3": "^7.9.0",
     "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
     "jwt-decode": "^4.0.0",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "recharts": "^2.15.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
